{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 68,
  "lineage": "dad4385c-4957-70a8-0f90-eae795e40a8f",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 32768,
            "id": "sgrule-2687915010",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f29cc6f45a2ca840",
            "security_group_rule_id": "sgr-081f919b676d52f3f",
            "self": false,
            "source_security_group_id": "sg-01c2aaacd0764c930",
            "timeouts": null,
            "to_port": 61000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.ecs_instances.aws_security_group.instance",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:432621609875:loadbalancer/app/Dev-Dev/06f78ddc1e2bb2c6",
            "arn_suffix": "app/Dev-Dev/06f78ddc1e2bb2c6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Dev-Dev-1525697980.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:432621609875:loadbalancer/app/Dev-Dev/06f78ddc1e2bb2c6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Dev-Dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01c2aaacd0764c930"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00527292dc0734ac1"
              },
              {
                "subnet_id": "subnet-034861aa77d6238c8"
              }
            ],
            "subnets": [
              "subnet-00527292dc0734ac1",
              "subnet-034861aa77d6238c8"
            ],
            "tags": {
              "Environment": "Dev"
            },
            "tags_all": {
              "Environment": "Dev"
            },
            "vpc_id": "vpc-0f8becb7a71fe1a27",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:432621609875:listener/app/Dev-Dev/06f78ddc1e2bb2c6/995296ff4131d239",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:432621609875:targetgroup/Dev-Dev-default/d7b74300fc0062c3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:432621609875:listener/app/Dev-Dev/06f78ddc1e2bb2c6/995296ff4131d239",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:432621609875:loadbalancer/app/Dev-Dev/06f78ddc1e2bb2c6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.alb.aws_alb.alb",
            "module.ecs.module.alb.aws_alb_target_group.default",
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:432621609875:targetgroup/Dev-Dev-default/d7b74300fc0062c3",
            "arn_suffix": "targetgroup/Dev-Dev-default/d7b74300fc0062c3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:432621609875:targetgroup/Dev-Dev-default/d7b74300fc0062c3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Dev-Dev-default",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Dev"
            },
            "tags_all": {
              "Environment": "Dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:security-group/sg-01c2aaacd0764c930",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c2aaacd0764c930",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Dev-Dev_alb",
            "name_prefix": "",
            "owner_id": "432621609875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev"
            },
            "tags_all": {
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https_from_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2184212422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c2aaacd0764c930",
            "security_group_rule_id": "sgr-09b85e68624532d4b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-613400973",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01c2aaacd0764c930",
            "security_group_rule_id": "sgr-07773cece4398a379",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.ecs_instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:security-group/sg-0f29cc6f45a2ca840",
            "description": "Used in Dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f29cc6f45a2ca840",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c2aaacd0764c930"
                ],
                "self": false,
                "to_port": 61000
              }
            ],
            "name": "Dev_Dev_default",
            "name_prefix": "",
            "owner_id": "432621609875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "Dev",
              "Environment": "Dev",
              "InstanceGroup": "default"
            },
            "tags_all": {
              "Cluster": "Dev",
              "Environment": "Dev",
              "InstanceGroup": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.ecs_instances",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2035891510",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f29cc6f45a2ca840",
            "security_group_rule_id": "sgr-087c7169e3f86b6c3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.ecs_instances.aws_security_group.instance",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06808618810cf47a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ef51a984219b520e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06808618810cf47a3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.nat.aws_nat_gateway.nat",
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c0059a9d7a56c3021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a60d0b0e6c89a6a8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0059a9d7a56c302",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.nat.aws_nat_gateway.nat",
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c9388355b2c69e61",
            "id": "r-rtb-0cb0eb031d0d2cde51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb0eb031d0d2cde5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.vpc.aws_internet_gateway.vpc",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c9388355b2c69e61",
            "id": "r-rtb-0a2ca16b4ae0d04131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2ca16b4ae0d0413",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.vpc.aws_internet_gateway.vpc",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07145d124b40c4d78",
            "association_id": "eipassoc-01774b29d2aab413e",
            "domain": "vpc",
            "id": "eipalloc-07145d124b40c4d78",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0a77c31aecf752a4c",
            "private_dns": "ip-192-168-1-77.ca-central-1.compute.internal",
            "private_ip": "192.168.1.77",
            "public_dns": "ec2-99-79-139-220.ca-central-1.compute.amazonaws.com",
            "public_ip": "99.79.139.220",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005935770790be3e8",
            "association_id": "eipassoc-0fb880e4b519cc83e",
            "domain": "vpc",
            "id": "eipalloc-005935770790be3e8",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-05068e4fcad7cf601",
            "private_dns": "ip-192-168-2-55.ca-central-1.compute.internal",
            "private_ip": "192.168.2.55",
            "public_dns": "ec2-3-98-180-105.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.98.180.105",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07145d124b40c4d78",
            "connectivity_type": "public",
            "id": "nat-0ef51a984219b520e",
            "network_interface_id": "eni-0a77c31aecf752a4c",
            "private_ip": "192.168.1.77",
            "public_ip": "99.79.139.220",
            "subnet_id": "subnet-00527292dc0734ac1"
          },
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005935770790be3e8",
            "connectivity_type": "public",
            "id": "nat-0a60d0b0e6c89a6a8",
            "network_interface_id": "eni-05068e4fcad7cf601",
            "private_ip": "192.168.2.55",
            "public_ip": "3.98.180.105",
            "subnet_id": "subnet-034861aa77d6238c8"
          },
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:route-table/rtb-06808618810cf47a3",
            "id": "rtb-06808618810cf47a3",
            "owner_id": "432621609875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ef51a984219b520e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "Dev_private_subnet_ca-central-1a"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Dev_private_subnet_ca-central-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:route-table/rtb-0c0059a9d7a56c302",
            "id": "rtb-0c0059a9d7a56c302",
            "owner_id": "432621609875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a60d0b0e6c89a6a8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "Dev_private_subnet_ca-central-1b"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Dev_private_subnet_ca-central-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b9352339f49a96e",
            "route_table_id": "rtb-06808618810cf47a3",
            "subnet_id": "subnet-042748ab15510ed5c"
          },
          "dependencies": [
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.private_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08389518f13445426",
            "route_table_id": "rtb-0c0059a9d7a56c302",
            "subnet_id": "subnet-0c06f744230ecb690"
          },
          "dependencies": [
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.private_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:subnet/subnet-042748ab15510ed5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042748ab15510ed5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "Dev_private_subnet_ca-central-1a"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Dev_private_subnet_ca-central-1a"
            },
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:subnet/subnet-0c06f744230ecb690",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c06f744230ecb690",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "Dev_private_subnet_ca-central-1b"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Dev_private_subnet_ca-central-1b"
            },
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:route-table/rtb-0cb0eb031d0d2cde5",
            "id": "rtb-0cb0eb031d0d2cde5",
            "owner_id": "432621609875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9388355b2c69e61",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "Dev_public_subnet_ca-central-1a"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Dev_public_subnet_ca-central-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:route-table/rtb-0a2ca16b4ae0d0413",
            "id": "rtb-0a2ca16b4ae0d0413",
            "owner_id": "432621609875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9388355b2c69e61",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "Dev_public_subnet_ca-central-1b"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Dev_public_subnet_ca-central-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0127e83f3aa806f1f",
            "route_table_id": "rtb-0cb0eb031d0d2cde5",
            "subnet_id": "subnet-00527292dc0734ac1"
          },
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9f353120bfe01cc",
            "route_table_id": "rtb-0a2ca16b4ae0d0413",
            "subnet_id": "subnet-034861aa77d6238c8"
          },
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:subnet/subnet-00527292dc0734ac1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00527292dc0734ac1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "Dev_public_subnet_ca-central-1a"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Dev_public_subnet_ca-central-1a"
            },
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:subnet/subnet-034861aa77d6238c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034861aa77d6238c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "Dev_public_subnet_ca-central-1b"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Dev_public_subnet_ca-central-1b"
            },
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:internet-gateway/igw-0c9388355b2c69e61",
            "id": "igw-0c9388355b2c69e61",
            "owner_id": "432621609875",
            "tags": {
              "Environment": "Dev"
            },
            "tags_all": {
              "Environment": "Dev"
            },
            "vpc_id": "vpc-0f8becb7a71fe1a27"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:vpc/vpc-0f8becb7a71fe1a27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0702fc3b52bf4fb34",
            "default_route_table_id": "rtb-01dfca449c224ee3d",
            "default_security_group_id": "sg-03e903b7f1faab7b6",
            "dhcp_options_id": "dopt-0dc291da4e0fe352d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8becb7a71fe1a27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01dfca449c224ee3d",
            "owner_id": "432621609875",
            "tags": {
              "Environment": "Dev",
              "Name": "Dev"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}